--- a/README
+++ b/README
@@ -1,6 +1,9 @@
  
- These files art part of the plugin gr-spi of GNU Radio for BeagleSDR
+ These files are part of the plugin gr-spi of GNU Radio for BeagleSDR
+ GNU Radio is a free & open-source software development toolkit that provides signal processing blocks to implement software radios. 
+ It can be used with readily-available low-cost external RF hardware to create software-defined radios, or without hardware in a simulation-like environment. 
+ It is widely used in hobbyist, academic and commercial environments to support both wireless communications research and real-world radio systems. 
+ 
+ How to use the plugin
  
 	https://github.com/mhe747/dawnboard/tree/master/gnuradio
-	
-	
