--- a/README
+++ b/README
@@ -1,9 +1,9 @@
  
- These files are part of the plugin gr-spi of GNU Radio for BeagleSDR
- GNU Radio is a free & open-source software development toolkit that provides signal processing blocks to implement software radios. 
- It can be used with readily-available low-cost external RF hardware to create software-defined radios, or without hardware in a simulation-like environment. 
- It is widely used in hobbyist, academic and commercial environments to support both wireless communications research and real-world radio systems. 
+These files are part of the plugin gr-spi of GNU Radio for BeagleSDR (https://github.com/mhe747/dawnboard)
+GNU Radio is a free & open-source software development toolkit that provides signal processing blocks to implement software radios. 
+It can be used with readily-available low-cost external BeagleSDR RF hardware on top of Beagleboard X15 in order to create software-defined radios, or without hardware in a simulation-like environment. 
+It is widely used in hobbyist, academic and commercial environments to support both wireless communications research and real-world radio systems. 
  
- How to use the plugin
+About the plugin :
  
 	https://github.com/mhe747/dawnboard/tree/master/gnuradio
