--- a/ChangeLog
+++ b/ChangeLog
@@ -19,7 +19,4 @@
 # Boston, MA 02110-1301, USA.
 # 
 
-For the blow by blow changes for each file, please consult
-http://gnuradio.org/trac/timeline
-	
-It's got everything that used to be in here ;)
+gr-spi is a plugin for spi control of the BeagleSDR, an add-on board that plug into Beagleboard X15
